; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/extr_hpsa.c_lockup_detected.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/extr_hpsa.c_lockup_detected.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ctlr_info = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ctlr_info*)* @lockup_detected to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lockup_detected(%struct.ctlr_info* %0) #0 {
  %2 = alloca %struct.ctlr_info*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store %struct.ctlr_info* %0, %struct.ctlr_info** %2, align 8
  %6 = call i32 (...) @get_cpu()
  store i32 %6, i32* %3, align 4
  %7 = load %struct.ctlr_info*, %struct.ctlr_info** %2, align 8
  %8 = getelementptr inbounds %struct.ctlr_info, %struct.ctlr_info* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* %3, align 4
  %11 = call i32* @per_cpu_ptr(i32 %9, i32 %10)
  store i32* %11, i32** %5, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = load i32, i32* %12, align 4
  store i32 %13, i32* %4, align 4
  %14 = call i32 (...) @put_cpu()
  %15 = load i32, i32* %4, align 4
  ret i32 %15
}

declare dso_local i32 @get_cpu(...) #1

declare dso_local i32* @per_cpu_ptr(i32, i32) #1

declare dso_local i32 @put_cpu(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
